fix heading alignment

--- a/src/Containers/Home/home.scss
+++ b/src/Containers/Home/home.scss
@@ -13,9 +13,6 @@
   }
 
   h3 {
-    margin-left: $gutter-xs;
-    @media (min-width: 768px) {
-      margin-left: 0rem;
-    }
+    text-align: center;
   }
 }
